# ai-proxy-1

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  vite.config.ts
.agents/skills/computer-use/: LICENSE  README.md  SKILL.md
.agents/skills/computer-use/scripts/: init.sh  scroll.swift
.github/workflows/: build-desktop.yml  build-docker.yml
docs/: server-deployment.md
docs/superpowers/plans/: 2026-05-21-ai-proxy-implementation.md  2026-05-22-ipc-to-http.md  2026-05-23-simplify-routing.md  2026-05-25-app-management.md  2026-05-25-system-tray.md  2026-05-26-desktop-relaunch.md
docs/superpowers/specs/: 2026-05-21-ai-proxy-design.md  2026-05-22-ipc-to-http-design.md  2026-05-23-simplify-routing-design.md  2026-05-25-app-management-design.md  2026-05-25-system-tray-design.md  2026-05-26-desktop-relaunch-design.md
scripts/: bump-version.sh
src/: App.vue  main.ts  router.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  Cargo.toml.bak  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_proxy_auth_key.sql  003_simplify_routing.sql  004_drop_auth_columns.sql  005_add_cache_ttft.sql  006_app_configs.sql  007_app_configs_v2.sql  008_add_timeout_settings.sql  009_drop_usage_stats.sql  010_add_endpoint_path.sql  011_create_mcp_tables.sql  012_create_skill_tables.sql  013_add_users_table.sql  014_add_context_window.sql  015_add_broken_symlink.sql  016_add_provider_enabled.sql  017_add_extract_system_from_messages.sql
src-tauri/src/: error.rs  http.rs  lib.rs  main.rs  server_main.rs  update.rs  update_timer.rs
src-tauri/src/apps/: config.rs  handlers.rs  launcher.rs  mod.rs  types.rs
src-tauri/src/auth/: handlers.rs  middleware.rs  types.rs
src-tauri/src/converter/: ir.rs  mod.rs
src-tauri/src/converter/generators/: anthropic.rs  completions.rs  gemini.rs  responses.rs
src-tauri/src/converter/parsers/: anthropic.rs  completions.rs  gemini.rs  mod.rs  responses.rs
src-tauri/src/db/: init.rs  mod.rs  pool.rs
src-tauri/src/interceptor/: engine.rs  mod.rs  rules.rs
src-tauri/src/ipc/: interceptor_cmd.rs  key_cmd.rs  log_cmd.rs  mod.rs  provider_cmd.rs  routing_cmd.rs  usage_cmd.rs
src-tauri/src/key/: mod.rs  rotation.rs  store.rs
src-tauri/src/logging/: layer.rs  mod.rs  store.rs
src-tauri/src/mcp/: handlers.rs  mod.rs  sync.rs  types.rs
src-tauri/src/provider/: endpoint.rs  manager.rs  mod.rs
src-tauri/src/routing/: mod.rs
src-tauri/src/server/: api.rs  handlers.rs  middleware.rs  mod.rs  router.rs
src-tauri/src/server/handlers/: anthropic.rs  completions.rs  gemini.rs  responses.rs
src-tauri/src/skill/: handlers.rs  manager.rs  mod.rs  scanner.rs  types.rs
src-tauri/src/usage/: mod.rs  pricing.rs  tracker.rs
src-tauri/tests/: ir_conversion.rs
src/api/: index.ts
src/assets/: main.css  variables.css
src/components/: UpdateNotification.vue
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/stores/: auth.ts  providers.ts
src/theme/: index.ts  use-theme.ts
src/types/: index.ts  mcp.ts  skill.ts
src/utils/: env.ts
src/views/: Apps.vue  Dashboard.vue  Login.vue  Logs.vue  McpServers.vue  Models.vue  Providers.vue  Rules.vue  RuntimeLogs.vue  Settings.vue  Skills.vue  Statistics.vue  Test.vue
