[package]
name = "ai-proxy"
version = "0.2.8"
description = "AI LLM Network Proxy"
authors = ["mrhua"]
edition = "2021"

[lib]
name = "ai_proxy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
ring = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
humantime = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
futures = "0.3"
async-stream = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
hostname = "0.3"
bytes = "1"
tokio-stream = "0.1"
once_cell = "1"
toml = "0.8"
dirs = "5"
semver = "1"

[dev-dependencies]
tempfile = "3"
