[package]
name = "ai-proxy"
version = "0.4.11"
description = "AI LLM Network Proxy"
authors = ["mrhua"]
edition = "2021"
default-run = "ai-proxy"

[lib]
name = "ai_proxy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ai-proxy"
path = "src/main.rs"

[[bin]]
name = "ai-proxy-server"
path = "src/server_main.rs"
required-features = ["server"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
# 公共依赖（两个版本都需要）
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws"] }
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "deflate", "brotli"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
ring = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
humantime = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
futures = "0.3"
async-stream = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
hostname = "0.3"
bytes = "1"
tokio-stream = "0.1"
once_cell = "1"
toml = "0.8"
dirs = "5"
semver = "1"

# 桌面版特有依赖（optional = true）
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-autostart = { version = "2", optional = true }
tauri-plugin-window-state = { version = "2", optional = true }

# 服务版特有依赖（optional = true）
clap = { version = "4", features = ["derive"], optional = true }
jsonwebtoken = { version = "9", optional = true }
bcrypt = { version = "0.15", optional = true }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", features = ["std"], optional = true }

[features]
default = ["desktop"]
desktop = [
    "tauri", "tauri-build",
    "tauri-plugin-opener", "tauri-plugin-dialog",
    "tauri-plugin-autostart", "tauri-plugin-window-state",
    "objc2"
]
server = ["clap", "jsonwebtoken", "bcrypt"]
